--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
+    "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
