--- a/package.json
+++ b/package.json
@@ -28,8 +28,11 @@
     "@nestjs/platform-express": "^10.0.0",
     "@types/passport-jwt": "^4.0.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^1.41.3",
     "dotenv": "^16.5.0",
     "google-auth-library": "^9.15.1",
+    "multer": "^2.0.1",
+    "multer-storage-cloudinary": "^4.0.0",
     "mysql2": "^3.11.3",
     "passport": "^0.7.0",
     "passport-google-oauth20": "^2.0.0",
@@ -37,6 +40,7 @@
     "passport-local": "^1.0.0",
     "reflect-metadata": "^0.2.0",
     "rxjs": "^7.8.1",
+    "streamifier": "^0.1.1",
     "typeorm": "^0.3.20"
   },
   "devDependencies": {
@@ -50,6 +54,7 @@
     "@types/node": "^20.3.1",
     "@types/passport-google-oauth20": "^2.0.16",
     "@types/passport-local": "^1.0.38",
+    "@types/streamifier": "^0.1.2",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.0.0",
     "@typescript-eslint/parser": "^8.0.0",
